Adapt to KFileWidget API change

And while at it fix filterSelected for mimetypes

BUG: 476525